normal commit [no constructive work 3]

--- a/AdaptiveHuffman/CMakeLists.txt
+++ b/AdaptiveHuffman/CMakeLists.txt
@@ -4,7 +4,9 @@ project(vitter)
 
 include_directories (${MY_SOURCE_DIR}/include)
 
-set(SOURCES src/floating_tree.cpp)
+set(SOURCES src/main.cpp src/floating_tree.cpp )
+
 
 add_executable(testing ${SOURCES})
+
 
